overlay/infra/ingresses/n9e-webapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n9e-webapi
spec:
  rules:
  - host: n9e.wayne.com
    http:
      paths:
      - backend:
          service:
            name: n9e-webapi
            port:
              number: 18000
        path: /
        pathType: Prefix
